feat! Real arinc heliports (#57)
* feat: new heliports for -21+ and -19+

* feat: test and cleanup

* feat! heliport integration

* tests and bugfixes

* sanity in test names and added helicopter stuff to proc test

* ok the arinc side seems done .... lol .... waits for falling debris to hit

* fixing crashes vs. not done yets.

* integration tests

* procedure assembly tests

* more tests

* more tests

* adding a later model arinc int test